add quick template

--- a/app/src/main/res/drawable/bg_card_overdue.xml
+++ b/app/src/main/res/drawable/bg_card_overdue.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <solid android:color="@color/background_surface"/>
     <corners android:radius="16dp"/>
-    <stroke android:width="2dp" android:color="@color/brand_accent"/> <!-- Using Accent (Red) for overdue -->
+    <stroke android:width="2dp" android:color="@color/color_delete"/> <!-- Red for overdue -->
 </shape>
